packages/mantine-react-table/src/components/head/MRT_TableHeadCellFilterLabel.module.css
.root {
  transition: all 150ms ease;
  --ai-size: var(--ai-size-sm);
  --ai-bg: transparent;
  --ai-hover: light-dark(
    var(--mantine-color-gray-1),
    var(--mantine-color-dark-6)
  );
  --ai-color: light-dark(
    var(--mantine-color-gray-5),
    var(--mantine-color-dark-3)
  );
  &[data-active] {
    --ai-color: var(--mantine-primary-color-filled);
  }
}

